Ros2_workspace/log/build_2022-05-21_16-47-51/nn_drone_final/stderr.log
  File "/home/xilinx/wrkspace/install/nn_drone_final/lib/python3.8/site-packages/nn_drone_final/SimpleArmMission.py", line 26
    if(msg.data.find("monitor") == 0 && self.armed == False):
                                      ^
SyntaxError: invalid syntax

